# ValueLogger

./: .gitignore  pyproject.toml
src/value_logger/: __init__.py
src/value_logger.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_logging.py
