[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "value_logger"
version = "0.0.1"
authors = [
    { name="Sumner Hearth", email="sumnernh@gmail.com" },
]
description = "Log and compare values"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/Renmusxd/ValueLogger"
Issues = "https://github.com/Renmusxd/ValueLogger/issues"